--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <title><%= htmlWebpackPlugin.options.title %></title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="<%= htmlWebpackPlugin.options.metaDesc %>" />
   <link rel="icon" type="image/png" href="favicon-32x32.png">
   <link rel="icon" type="image/png" href="favicon-16x16.png">
